# rsomics-bam-reheader

./: Cargo.toml  README.md
benches/: bench.rs
src/: bgzf_copy.rs  cli.rs  lib.rs
tests/: compat.rs
tests/golden/: new_header.sam  reads.sam
