[package]
name = "rsomics-bam-reheader"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-reheader"
authors = ["Zane Leong <efd@live.com>"]
description = "Replace a BAM header, passing alignment blocks through verbatim — Rust port of samtools reheader"

[[bin]]
name = "rsomics-bam-reheader"
path = "src/main.rs"


[lib]
name = "rsomics_bam_reheader"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1.5" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam", "bgzf"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
tempfile = "3"
